test/fail/integration/_fail_grammar_type_1.hs
x :: int
main = print "hello"